<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include
		layout="@layout/toolbar"/>
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/toolbar">
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
	
			<LinearLayout
				android:id="@+id/detail_info"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="?attr/colorPrimary"
				android:orientation="vertical">
		
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:gravity="center_vertical"
					android:orientation="horizontal">
			
					<TextView
						android:layout_width="100dp"
						android:layout_height="wrap_content"
						android:text="@string/url"
						android:textSize="16sp"
						android:textColor="@color/white"/>
			
					<TextView
						android:id="@+id/info_url"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:maxLines="2"
						android:ellipsize="end"
						android:textSize="16sp"
						android:textColor="@color/white"/>
			
				</LinearLayout>
		
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:gravity="center_vertical"
					android:orientation="horizontal">

					<TextView
						android:layout_width="100dp"
						android:layout_height="wrap_content"
						android:text="@string/path"
						android:textSize="16sp"
						android:textColor="@color/white"/>

					<TextView
						android:id="@+id/info_path"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:maxLines="2"
						android:ellipsize="end"
						android:textSize="16sp"
						android:textColor="@color/white"/>

				</LinearLayout>
		
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:gravity="center_vertical"
					android:orientation="horizontal">

					<TextView
						android:layout_width="100dp"
						android:layout_height="wrap_content"
						android:text="@string/create_date"
						android:textSize="16sp"
						android:textColor="@color/white"/>

					<TextView
						android:id="@+id/info_create"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:singleLine="true"
						android:ellipsize="end"
						android:textColor="@color/white"/>

				</LinearLayout>
		
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:gravity="center_vertical"
					android:orientation="horizontal">

					<TextView
						android:layout_width="100dp"
						android:layout_height="wrap_content"
						android:text="@string/total_size"
						android:textSize="16sp"
						android:textColor="@color/white"/>

					<TextView
						android:id="@+id/info_total"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:singleLine="true"
						android:ellipsize="end"
						android:textColor="@color/white"/>

				</LinearLayout>
		
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:gravity="center_vertical"
					android:orientation="horizontal">

					<TextView
						android:layout_width="100dp"
						android:layout_height="wrap_content"
						android:text="@string/downloaded_size"
						android:textSize="16sp"
						android:textColor="@color/white"/>

					<TextView
						android:id="@+id/info_done"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:singleLine="true"
						android:ellipsize="end"
						android:textColor="@color/white"/>

				</LinearLayout>
		
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:gravity="center_vertical"
					android:orientation="horizontal">

					<TextView
						android:layout_width="100dp"
						android:layout_height="wrap_content"
						android:text="@string/speed"
						android:textSize="16sp"
						android:textColor="@color/white"/>

					<TextView
						android:id="@+id/info_speed"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:singleLine="true"
						android:ellipsize="end"
						android:textColor="@color/white"/>

				</LinearLayout>
		
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:gravity="center_vertical"
					android:orientation="horizontal">

					<TextView
						android:layout_width="100dp"
						android:layout_height="wrap_content"
						android:text="@string/blocks_count"
						android:textSize="16sp"
						android:textColor="@color/white"/>

					<TextView
						android:id="@+id/info_blocks"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:singleLine="true"
						android:ellipsize="end"
						android:textColor="@color/white"/>

				</LinearLayout>
		
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:gravity="center_vertical"
					android:orientation="horizontal">

					<TextView
						android:layout_width="100dp"
						android:layout_height="wrap_content"
						android:text="@string/threads_count"
						android:textSize="16sp"
						android:textColor="@color/white"/>

					<TextView
						android:id="@+id/info_threads"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:singleLine="true"
						android:ellipsize="end"
						android:textColor="@color/white"/>

				</LinearLayout>
		
			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="4dp"
				android:layout_below="@id/detail_info"
				android:background="@drawable/action_shadow"/>
	
	
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/detail_info"
				android:padding="10dp">
			
				<us.shandian.giga.ui.common.BlockGraphView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/info_graph"/>
			
			</LinearLayout>
		
		</RelativeLayout>
		
	</ScrollView>

</RelativeLayout>
